[package]
name = "error-handling-and-dependency-injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = "0.14.27"
serde = { version =  "1.0.164", features = ["derive"] }
serde_json = "1.0"
tokio ={ version =  "1.29.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1"
tracing-subscriber ={ version =  "0.3.17", features = ["env-filter", "fmt"]}
uuid = { version = "1.4.0", features = ["serde", "v4"] }

